--- a/VuforiaAR/app/src/main/AndroidManifest.xml
+++ b/VuforiaAR/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.app.AboutActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
